5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1745_3088.log
== TEST (2019-05-15 14:46:18) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
t = 0

while(n != 0):
	t = t + (par + impar) / 100
	par = par + 2
	impar = impar + 2
print(t)
-- ERROR:
File "XXXX", line 11
    if(aux == 1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:48) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
t = 0

while(n != 0):
	t = t + (par + impar) / 100
	par = par + 2
	impar = impar + 2

	print(t)
-- OUTPUT:
0.01
0.060000000000000005
0.15
0.28
0.45000000000000007
0.66
0.91
1.2
1.53
1.9
2.31
2.7600000000000002
3.25
3.7800000000000002
4.3500000000000005
4.960000000000001
5.610000000000001
6.300000000000001
7.030000000000001
7.800000000000001
8.610000000000001
9.46
10.350000000000001
11.280000000000001
12.250000000000002
13.260000000000002
14.310000000000002
15.400000000000002
16.53
17.700000000000003
18.910000000000004
20.160000000000004
21.450000000000003
22.78
24.150000000000002
25.560000000000002
27.01
28.5
30.03
31.6
33.21
34.86
36.55
38.279999999999994
40.05
41.86
43.71
45.6
47.53
49.5
51.51
53.559999999999995
55.64999999999999
57.779999999999994
59.949999999999996
62.16
64.41
66.7
69.03
71.4
73.81
76.26
78.75
81.28
83.85
86.46
89.11
91.8
94.53
97.3
100.11
102.96
105.85
108.78
111.75
114.76
117.81
120.9
124.03
127.2
130.41
133.66
136.95
140.28
143.65
147.06
150.51
154.0
157.53
161.1
164.71
168.36
172.05
175.78
179.55
183.36
187.21
191.1
195.03
199.0
203.01
207.06
211.15
215.28
219.45
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:11) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
t = 0

while(n != 0):
	t = t + (par + impar) / 100
	par = par + 2
	impar = impar + 2

	print(t)
-- OUTPUT:
0.01
0.060000000000000005
0.15
0.28
0.45000000000000007
0.66
0.91
1.2
1.53
1.9
2.31
2.7600000000000002
3.25
3.7800000000000002
4.3500000000000005
4.960000000000001
5.610000000000001
6.300000000000001
7.030000000000001
7.800000000000001
8.610000000000001
9.46
10.350000000000001
11.280000000000001
12.250000000000002
13.260000000000002
14.310000000000002
15.400000000000002
16.53
17.700000000000003
18.910000000000004
20.160000000000004
21.450000000000003
22.78
24.150000000000002
25.560000000000002
27.01
28.5
30.03
31.6
33.21
34.86
36.55
38.279999999999994
40.05
41.86
43.71
45.6
47.53
49.5
51.51
53.559999999999995
55.64999999999999
57.779999999999994
59.949999999999996
62.16
64.41
66.7
69.03
71.4
73.81
76.26
78.75
81.28
83.85
86.46
89.11
91.8
94.53
97.3
100.11
102.96
105.85
108.78
111.75
114.76
117.81
120.9
124.03
127.2
130.41
133.66
136.95
140.28
143.65
147.06
150.51
154.0
157.53
161.1
164.71
168.36
172.05
175.78
179.55
183.36
187.21
191.1
195.03
199.0
203.01
207.06
211.15
215.28
219.45
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:24) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
t = 0

while(n <= 0 or n >= 0):
	t = t + (par + impar) / 100
	par = par + 2
	impar = impar + 2

print(t)
-- OUTPUT:
0.01
0.060000000000000005
0.15
0.28
0.45000000000000007
0.66
0.91
1.2
1.53
1.9
2.31
2.7600000000000002
3.25
3.7800000000000002
4.3500000000000005
4.960000000000001
5.610000000000001
6.300000000000001
7.030000000000001
7.800000000000001
8.610000000000001
9.46
10.350000000000001
11.280000000000001
12.250000000000002
13.260000000000002
14.310000000000002
15.400000000000002
16.53
17.700000000000003
18.910000000000004
20.160000000000004
21.450000000000003
22.78
24.150000000000002
25.560000000000002
27.01
28.5
30.03
31.6
33.21
34.86
36.55
38.279999999999994
40.05
41.86
43.71
45.6
47.53
49.5
51.51
53.559999999999995
55.64999999999999
57.779999999999994
59.949999999999996
62.16
64.41
66.7
69.03
71.4
73.81
76.26
78.75
81.28
83.85
86.46
89.11
91.8
94.53
97.3
100.11
102.96
105.85
108.78
111.75
114.76
117.81
120.9
124.03
127.2
130.41
133.66
136.95
140.28
143.65
147.06
150.51
154.0
157.53
161.1
164.71
168.36
172.05
175.78
179.55
183.36
187.21
191.1
195.03
199.0
203.01
207.06
211.15
215.28
219.45
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:10) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
t = 0

while(n <= 0 or n >= 0 and n != 0):
	t = t + (par + impar) / 100
	
	par = par + 2
	impar = impar + 2

print(t)
-- OUTPUT:
0.01
0.060000000000000005
0.15
0.28
0.45000000000000007
0.66
0.91
1.2
1.53
1.9
2.31
2.7600000000000002
3.25
3.7800000000000002
4.3500000000000005
4.960000000000001
5.610000000000001
6.300000000000001
7.030000000000001
7.800000000000001
8.610000000000001
9.46
10.350000000000001
11.280000000000001
12.250000000000002
13.260000000000002
14.310000000000002
15.400000000000002
16.53
17.700000000000003
18.910000000000004
20.160000000000004
21.450000000000003
22.78
24.150000000000002
25.560000000000002
27.01
28.5
30.03
31.6
33.21
34.86
36.55
38.279999999999994
40.05
41.86
43.71
45.6
47.53
49.5
51.51
53.559999999999995
55.64999999999999
57.779999999999994
59.949999999999996
62.16
64.41
66.7
69.03
71.4
73.81
76.26
78.75
81.28
83.85
86.46
89.11
91.8
94.53
97.3
100.11
102.96
105.85
108.78
111.75
114.76
117.81
120.9
124.03
127.2
130.41
133.66
136.95
140.28
143.65
147.06
150.51
154.0
157.53
161.1
164.71
168.36
172.05
175.78
179.55
183.36
187.21
191.1
195.03
199.0
203.01
207.06
211.15
215.28
219.45
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:21) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
t = 0

while(n <= 0 or n >= 0 and n != 0):
	t = t + (par + impar) / 100
	
	par = par + 2
	impar = impar + 2

print(t)
-- OUTPUT:
0.01
0.060000000000000005
0.15
0.28
0.45000000000000007
0.66
0.91
1.2
1.53
1.9
2.31
2.7600000000000002
3.25
3.7800000000000002
4.3500000000000005
4.960000000000001
5.610000000000001
6.300000000000001
7.030000000000001
7.800000000000001
8.610000000000001
9.46
10.350000000000001
11.280000000000001
12.250000000000002
13.260000000000002
14.310000000000002
15.400000000000002
16.53
17.700000000000003
18.910000000000004
20.160000000000004
21.450000000000003
22.78
24.150000000000002
25.560000000000002
27.01
28.5
30.03
31.6
33.21
34.86
36.55
38.279999999999994
40.05
41.86
43.71
45.6
47.53
49.5
51.51
53.559999999999995
55.64999999999999
57.779999999999994
59.949999999999996
62.16
64.41
66.7
69.03
71.4
73.81
76.26
78.75
81.28
83.85
86.46
89.11
91.8
94.53
97.3
100.11
102.96
105.85
108.78
111.75
114.76
117.81
120.9
124.03
127.2
130.41
133.66
136.95
140.28
143.65
147.06
150.51
154.0
157.53
161.1
164.71
168.36
172.05
175.78
179.55
183.36
187.21
191.1
195.03
199.0
203.01
207.06
211.15
215.28
219.45
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:35) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
t = 0

while(n <= 0 or n >= 0 and n != 0):
	t = t + (par + impar) / 100
	
	par = par + 2
	impar = impar + 2
	n = int(input("Digite o numero: "))
	
	cont = cont + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:49) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
t = 0
n = int(input("Digite o numero: "))

while(n <= 0 or n >= 0 and n != 0):
	t = t + (par + impar) / 100
	
	par = par + 2
	impar = impar + 2
	
	
	cont = cont + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:16:43) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
t = 0
n = int(input("Digite o numero: "))

while(n <= 0 or n >= 0 and n != 0):
	t = t + (par + impar) / 100
	
	par = par + 2
	impar = impar + 2
	
	
	cont = cont + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:17:17) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
t = 0
n = int(input("Digite o numero: "))

while(n <= 0 or n >= 0 and n != 0):
	t = t + (par + impar) / 100
	
	par = par + 2
	impar = impar + 2
	n = int(input("Digite o numero: "))
	
	cont = cont + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:26) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
t = 0

while(n <= 0 or n >= 0):
	t = t + (par + impar) / 100
	
	par = par + 2
	impar = impar + 2
	n = int(input("Digite o numero: "))
	
	cont = cont + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:26) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
t = 0

while(n <= 0 or n >= 0):
	t = t + (par + impar) / 100
	
	par = par + 2
	impar = impar + 2
	cont = cont + 1
	n = int(input("Digite o numero: "))
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:55) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
t = 0

while(n != 0):
	t = t + (par + impar) / 100
	
	par = par + 2
	impar = impar + 2
	cont = cont + 1
	n = int(input("Digite o numero: "))

print(t)
-- OUTPUT:
0.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:41) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
t = 0

while(n != 0):
	t = t + (par * impar) / 100
	
	par = par + 2
	impar = impar + 2
	cont = cont + 1
	n = int(input("Digite o numero: "))

print(t)
-- OUTPUT:
1.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:23:03) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
ptp = 0
pti = 0

while(n != 0):
	ptp = ptp + (par * impar) / 100
	pti = pti + (par * impar) / 100
	
	ptp = par + 2
	pti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(t)
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:23:41) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
ptp = 0
pti = 0

while(n != 0):
	ptp = ptp + (par * impar) / 100
	pti = pti + (par * impar) / 100
	
	ptp = par + 2
	pti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(ptp)
print(pti)
-- OUTPUT:
4
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:45) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
ptp = 0
pti = 0

while(n != 0):
	ptp = ptp * (par + impar) / 100
	pti = pti * (par + impar) / 100
	
	ptp = par + 2
	pti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(ptp)
print(pti)
-- OUTPUT:
4
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:28:33) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
ptp = 0
pti = 0

while(n != 0):
	ptp = ptp * ((par + impar) / 100)
	pti = pti * ((par + impar) / 100)
	
	ptp = par + 1
	pti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(ptp)
print(pti)
-- OUTPUT:
3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:30:50) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
tp = 0
ti = 0

while(n != 0):
	tp = tp + ((par * impar) / 100)
	ti = ti + ((par * impar) / 100)
	
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(ptp)
print(pti)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(ptp)
NameError: name 'ptp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:31:07) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
tp = 0
ti = 0

while(n != 0):
	tp = tp + ((par * impar) / 100)
	ti = ti + ((par * impar) / 100)
	
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:31:13) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
tp = 0
ti = 0

while(n != 0):
	tp = tp + ((par * impar) / 100)
	ti = ti + ((par * impar) / 100)
	
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:31:54) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
tp = 0
ti = 0

while(n != 0):
	tp = par + ((par * impar) / 100)
	ti = impar + ((par * impar) / 100)
	
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:34:07) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
tp = 0
ti = 0

while(n != 0):
	tp = par + ((n + par) / 100)
	ti = impar + ((n + impar) / 100)
	
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:34:32) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
tp = 0
ti = 0

while(n != 0):
	tp = par + ((n + par) / 100)
	ti = impar + ((n + impar) / 100)
	
	tp = par + 1
	ti = impar + 1
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
3
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:36:56) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n%2)==0):
		tp = n + ((par + impar) / 100)
	else:
		ti = n + ((par + impar) / 100)
			
	tp = par + 1
	ti = impar + 1
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
3
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:37:56) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 2
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n%2)==0):
		tp = n * ((par + impar) / 100)
	else:
		ti = n * ((par + impar) / 100)
			
	tp = par + 1
	ti = impar + 1
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
3
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:38:44) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n%2)==0):
		tp = n * ((par + impar) / 100)
	else:
		ti = n * ((par + impar) / 100)
			
	tp = par + 2
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:40:10) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n % 2) == 0):
		tp = n * ((par + impar) / 100)
	else:
		ti = n * ((par + impar) / 100)
			
	tp = par + 2
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

	print(tp)
	print(ti)
-- OUTPUT:
2
3
2
3
2
3
2
3
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:41:15) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n % 2) == 0):
		tp = n + ((par * cont) / 100)
	else:
		ti = n + ((par * cont) / 100)
			
	tp = par + 2
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

	print(tp)
	print(ti)
-- OUTPUT:
2
3
2
3
2
3
2
3
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:41:24) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n % 2) == 0):
		tp = n + ((par * cont) / 100)
	else:
		ti = n + ((par * cont) / 100)
			
	tp = par + 2
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:41:47) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n % 2) == 0):
		tp = n + ((par * cont) / 100)
	else:
		ti = n + ((par * cont) / 100)
			
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:41:56) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n % 2) == 0):
		tp = n + ((par * cont) / 100)
	else:
		ti = n + ((par * cont) / 100)
			
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:42:48) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n % 2) == 0):
		tp = ((par / cont) * 100)
	else:
		ti = ((par / cont) * 100)
			
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    tp = ((par / cont) * 100)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:43:07) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n % 2) == 0):
		tp = n + ((par / cont) * 100)
	else:
		ti = n + ((par / cont) * 100)
			
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    tp = n + ((par / cont) * 100)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:44:10) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n % 2) == 0):
		tp = n + ((cont + par) * 100)
	else:
		ti = n + ((cont + impar) * 100)
			
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:44:52) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n % 2) == 0):
		tp = n + ((cont * par) / 100)
	else:
		ti = n + ((cont * impar) / 100)
			
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:45:28) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n % 2) == 0):
		tp = n + ((cont * par) / 100)
	else:
		ti = n + ((cont * impar) / 100)
			
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- EXECUTION TIME:
0.134515
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
100.0
0.0
---- user output:
1
3
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
42.86
57.14
---- user output:
1
3
-- TEST CASE 3:
---- input:
1
2
3
4
5
6
7
8
9
0
---- correct output:
44.44
55.56
---- user output:
1
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:45:29) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n % 2) == 0):
		tp = n + ((cont * par) / 100)
	else:
		ti = n + ((cont * impar) / 100)
			
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:47:13) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n % 2) == 0):
		tp = n + ((cont * par) / 100)
	else:
		ti = n + ((cont * impar) / 100)
			
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:47:26) 
-- CODE:
n = int(input("Digite o numero: "))

cont = 0
par = 0
impar = 1
tp = 0
ti = 0

while(n != 0):
	if((n % 2) == 0):
		tp = n + ((cont * par) / 100)
	else:
		ti = n + ((cont * impar) / 100)
			
	tp = par + 1
	ti = impar + 2
	cont = cont + 1
	
	n = int(input("Digite o numero: "))

print(tp)
print(ti)
-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
